K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-api
  labels:
    app: query-system-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: query-system-api
  template:
    metadata:
      labels:
        app: query-system-api
    spec:
      containers:
        - image: husamalsheikh/queryapi:latest
          imagePullPolicy: Always
          name: query-system-api
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "400Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-system-api
  ports:
    - port: 8081
      targetPort: 8081

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: twilio-api
  labels:
    app: twilio-system-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twilio-system-api
  template:
    metadata:
      labels:
        app: twilio-system-api
    spec:
      containers:
        - image: husamalsheikh/twilioapi:latest
          imagePullPolicy: Always
          name: twilio-system-api
          ports:
            - containerPort: 3030
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "100m"

---

apiVersion: v1
kind: Service
metadata:
  name: twilio-service
spec:
  selector:
    app: twilio-system-api
  ports:
    - port: 3030
      targetPort: 3030

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  labels:
    app: weather-system-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-system-api
  template:
    metadata:
      labels:
        app: weather-system-api
    spec:
      containers:
        - image: husamalsheikh/weatherapi:latest
          imagePullPolicy: Always
          name: weather-system-api
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather-system-api
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
